--- a/webapp/.env
+++ b/webapp/.env
@@ -1,3 +1,3 @@
 PORT=3005
-CONNECTION = mongodb+srv://developer:01rjOZq2Ba3TbC3Z@cluster0.6iobce9.mongodb.net/
+CONNECTION = mongodb+srv://<Username>:<password>@<Cluster_Name>.mongodb.net/
 
